# pgf-freeimage

./: ProjectHome.md
FreeImage/: FreeImage.2008.sln  FreeImage.2008.vcproj
FreeImage/Source/LibJPEG/: LibJPEG.2008.vcproj
FreeImage/Source/LibOpenJPEG/: LibOpenJPEG.2008.vcproj
FreeImage/Source/LibRawLite/: LibRawLite.2008.vcproj
FreeImage/Source/LibRawLite/libraw/: libraw_datastream.h
FreeImage/Source/OpenEXR/: OpenEXR.2008.vcproj
FreeImage/Source/ZLib/: ZLib.2008.vcproj
FreeImage/Source/libpgf/: Makefile.am  PGFCodec.vcproj  configure.ac  libpgf.pc.in
FreeImage/Source/libpgf/doc/: Makefile.am
FreeImage/Source/libpgf/include/: Makefile.am  PGFimage.h  PGFplatform.h  Stream.h
FreeImage/Source/libpgf/src/: Encoder.h  Makefile.am  PGFimage.cpp  Stream.cpp  WaveletTransform.h
FreeImage/Wrapper/FreeImage.NET/cpp/FreeImageIO/: FreeImageIO.Net.vcproj
trunk/FreeImage/: FreeImage.2008.vcproj
trunk/FreeImage/Source/: FreeImage.h  Plugin.h
trunk/FreeImage/Source/FreeImage/: Plugin.cpp  PluginPGF.cpp
trunk/FreeImage/Source/FreeImageLib/: FreeImageLib.2008.vcproj
trunk/FreeImage/Source/LibMNG/: LibMNG.2008.vcproj
trunk/FreeImage/Source/LibPNG/: LibPNG.2008.vcproj
trunk/FreeImage/Source/LibTIFF/: LibTIFF.2008.vcproj
trunk/FreeImage/Source/libpgf/: PGFCodec.sln  PGFCodec.vcproj  README
trunk/FreeImage/Source/libpgf/doc/: Doxyfile.in
trunk/FreeImage/Source/libpgf/src/: BitStream.h  Decoder.h  Encoder.cpp  Subband.cpp  Subband.h  WaveletTransform.cpp
trunk/FreeImage/Wrapper/FreeImagePlus/: FreeImagePlus.2008.vcproj
(+7 files in other folders)
